--- a/src/sections/Enroll/FeesPayments/FeesPayments.scss
+++ b/src/sections/Enroll/FeesPayments/FeesPayments.scss
@@ -12,9 +12,9 @@
     font-size: 25px;
     text-transform: uppercase;
     text-align: center;
-    position: absolute;
-    left: 40%;
-    margin-top: 5rem;
+    // position: absolute;
+    // left: 40%;
+    margin-top: 3rem;
     //top: 40%;
     z-index: 999;
     font-weight: 500;
@@ -33,6 +33,7 @@
   .FeesPayments {
     //padding: 0 10rem;
     height: 100vh;
+    margin-top: -10rem;
     // background-image: url("../../../assets/images/ug-images/1920x967.jpg");
     //background-size: cover;
     background-size: 100%;
