--- a/src/sections/Enroll/Payment/Payment.scss
+++ b/src/sections/Enroll/Payment/Payment.scss
@@ -1,5 +1,5 @@
 .Payment{
-  padding-top: 35rem;
+  padding-top: 37rem;
   @media #{$sm,$md} {
     padding-top: 2rem;
   }
