--- a/src/sections/MiddleSchool/Inclusion.scss
+++ b/src/sections/MiddleSchool/Inclusion.scss
@@ -27,7 +27,7 @@
     }
     .subTitle {
       margin-top: 0 !important;
-      font-size: 18px;
+      font-size: 17px;
       font-weight: 400;
       margin-bottom: 1rem;
     }
