--- a/src/sections/StudentCare/Inclusion/Inclusion.scss
+++ b/src/sections/StudentCare/Inclusion/Inclusion.scss
@@ -20,13 +20,13 @@
     }
     .subTitle {
       margin-top: 0 !important;
-      font-size: 18px;
+      font-size: 17px;
       font-weight: 400;
       margin-bottom: 1rem;
     }
   .LearnmoreButton{
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     background: transparent;
     border-bottom: 1px solid black;
     border-left: 0;
